[package]
name = "quicknvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
futures-util = "0.3"
anyhow = { version = "1.0" }
async-recursion = "1.0.2"
lazy_static = "1.4.0"
